--- a/package.json
+++ b/package.json
@@ -11,16 +11,22 @@
   },
   "dependencies": {
     "axios": "^1.5.0",
+    "framer-motion": "^10.16.2",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
-    "react-router-dom": "^6.15.0"
+    "react-icons": "^4.10.1",
+    "react-paginate": "^8.2.0",
+    "react-query": "^3.39.3",
+    "react-router-dom": "^6.15.0",
+    "react-table": "^7.8.0"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-table": "^7.7.15",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
