--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.5.0",
+    "date-fns": "^2.30.0",
     "framer-motion": "^10.16.2",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
