--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-floating-whatsapp": "^5.0.8",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-paginate": "^8.2.0",
