installed web3modal

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 VITE_API_URL=http://localhost:4500/api
+VITE_NFT_ALCHEMY_PROVIDER=https://neat-silent-shape.matic-testnet.discover.quiknode.pro/0f4fd8fd0aa2fc7b34bc33a93193b6dc689824b5/
