--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@web3modal/react": "^2.7.1",
     "axios": "^1.5.0",
     "date-fns": "^2.30.0",
-    "ethers": "^6.7.1",
+    "ethers": "^5.7.1",
     "framer-motion": "^10.16.2",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
@@ -26,9 +26,11 @@
     "react-paginate": "^8.2.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.15.0",
+    "react-spinners": "^0.13.8",
     "react-table": "^7.8.0",
     "viem": "^1.10.8",
-    "wagmi": "^1.4.1"
+    "wagmi": "^1.4.1",
+    "web3": "^4.1.1"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.3",
