--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,10 +15,14 @@
     "jsx": "react-jsx",
 
     /* Linting */
-    "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    //
+    "esModuleInterop": true,
+    "strict": true,
+
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
